- Added firebase - Implemented auth and routing

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+.fade-in {
+  animation: fadeIn 3s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
